# dona_francisca_poc

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  test_document_loader.py  test_llm_service.py
app/data/extracted/: GFD-Owner Manual-4-1-14_extracted.json
app/data/manuals/: DESPIECE_MMAA.txt  GDF-Technical Specifications 2012.txt  GFD-Owner Manual-4-1-14.txt  MANUAL DE OPERACION Y MANTENIMIENTO CATERPILLAR C4.4.txt  MN_BLOWERS.txt  Passage Plan RYA ocean ANDRES LOPEZ.txt  mcw chilles 8.04 L-2164 Manual.txt
app/docs/: IMPLEMENTATION_DETAILS.md  POC_PLAN.md
app/services/: __init__.py  data_extractor.py  document_loader.py  llm_service.py
app/ui/: main.py
